# aoc-copier

./: .gitignore  .pre-commit-config.yaml  README.md  copier.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
project/: README.md.jinja  pyproject.toml.jinja
project/src/{{package_name}}/: .env.jinja  cli.py
project/src/{{package_name}}/day00/: part1.py
tests/: conftest.py  test_project_generation.py
