[project]
name = "aoc-copier"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Tyler Baur", email = "baur.tyler@gmail.com" }]
dependencies = [
    "pre-commit>=3.3.3",
    "pytest>=7.4.0",
    "copier>=8.1.0",
    "pytest-copier>=0.1.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
